--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -1,4 +1,7 @@
 [ubuntu_servers]
+# Local testing 
+# localhost ansible_connection=local ansible_python_interpreter=/usr/bin/python3
+
 # Replace with your actual server details
 server1 ansible_host=192.168.1.100 ansible_user=ubuntu
-# server2 ansible_host=192.168.1.101 ansible_user=ubuntu
+# server2 ansible_host=192.168.1.101 ansible_user=ubunt
